--- a/SheFit/gyms/templates/gyms/component/gyms_list.html
+++ b/SheFit/gyms/templates/gyms/component/gyms_list.html
@@ -12,10 +12,9 @@
             <div class="card-body d-flex flex-column gap-3">
 
 
-                <!-- صف: يمين (التقييم + التعليقات + المدربين) | يسار (الأحياء + الاسم + التفاصيل) -->
                 <div class="d-flex justify-content-between align-items-start w-100">
 
-                    <!-- === الجهة اليمنى (تقييم + تعليقات + مدربين) === -->
+                    <!--  الجهة اليمنى تقييم + تعليقات + مدربين -->
                     <div class="d-flex flex-column gap-2 text-start">
 
                         <!-- متوسط التقييم -->
@@ -51,7 +50,7 @@
                     </div>
 
 
-                    <!-- === الجهة اليسرى (الأحياء + اسم النادي + تفاصيل) === -->
+                    <!--  الجهة اليسرى الأحياء + اسم النادي + تفاصيل  -->
                     <div class="d-flex flex-column gap-2 text-end">
 
                         <!-- الأحياء -->
