--- a/SheFit/accounts/templates/accounts/coach_signup.html
+++ b/SheFit/accounts/templates/accounts/coach_signup.html
@@ -3,14 +3,14 @@
 {% block title %}إنشاء حساب{% endblock %}
 
 {% block content %}
-<section class=" d-flex justify-content-center align-items-center ">
-    <div class="col-12 col-md-6 contact-container">
-        <div class="col-12">
-            <h2 style="font-size: 40px;"><strong>إنشاء حساب مدربة</strong></h2>
+<section class="d-flex justify-content-center align-items-center mt-5 mb-5">
+    <div class="col-12 col-md-6">
+        <div class="card shadow-sm p-4">
+            <h2 class="mb-5 mt-3 text-center"><strong>إنشاء حساب مدربة</strong></h2>
 
-        </div>
+       
 
-        <form class="row g-3 needs-validation" action="{% url 'accounts:coach_signup_view' %}" method="post" enctype="application/x-www-form-urlencoded">
+        <form class="row g-3 needs-validation" action="{% url 'accounts:coach_signup_view' %}" method="post" enctype="multipart/form-data">
             {%csrf_token %}
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" name="username" placeholder="" required>
@@ -25,6 +25,13 @@
                 <label for="floatingInput">الاسم الاخير</label>
             </div>
 
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInput" name="about" placeholder="عنك" required>
+                <label for="floatingInput">نبذة عنك</label>
+            </div>
+
+            
+            
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" name="speciality" placeholder="" required>
                 <label for="floatingInput">التخصص</label>
@@ -56,8 +63,18 @@
             <div class="col-12">
                 <button class="btn btn-dark w-100" type="submit">إنشاء حساب</button>
             </div>
-        </form>
-        </body>
 
-        </html>
+        </form>
+          <div class="text-center mt-3">
+            <small class="text-muted">
+                هل لديك حساب؟
+                <a href="{% url 'accounts:signin_view' %}" class="text-primary text-decoration-none">
+                    سجلي دخول الان
+                </a>
+            </small>
+        </div>
+
+        </div>
+    </div>
+</section>
         {% endblock %}
