--- a/SheFit/accounts/templates/accounts/trainee_signup.html
+++ b/SheFit/accounts/templates/accounts/trainee_signup.html
@@ -4,15 +4,12 @@
 
 {% block content %}
 
-<section class=" d-flex justify-content-center align-items-center ">
-    <div class="col-12 col-md-6 contact-container">
-        <div class="col-12">
-            <h2 style="font-size: 40px;"><strong>إنشاء حساب متدربة</strong></h2>
+<section class="d-flex justify-content-center align-items-center mt-5 mb-5">
+    <div class="col-12 col-md-6">
+        <div class="card shadow-sm p-4">
+            <h2 class="mb-5 mt-3 text-center"><strong>إنشاء حساب متدربة</strong></h2>
 
-        </div>
-
-        <form class="row g-3 needs-validation" action="{% url 'accounts:trainee_signup_view' %}" method="post"
-            enctype="application/x-www-form-urlencoded">
+        <form class="row g-3 needs-validation" action="{% url 'accounts:trainee_signup_view' %}" method="post" enctype="multipart/form-data">
             {%csrf_token %}
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" name="username" placeholder="" required>
@@ -72,8 +69,17 @@
                 <button class="btn btn-dark w-100" type="submit">إنشاء حساب</button>
             </div>
         </form>
-        </body>
+        <div class="text-center mt-3">
+            <small class="text-muted">
+                هل لديك حساب؟
+                <a href="{% url 'accounts:signin_view' %}" class="text-primary text-decoration-none">
+                    سجلي دخول الان
+                </a>
+            </small>
+        </div>
 
-        </html>
-
+     
+        </div>
+    </div>
+</section>
     {% endblock %}
