--- a/SheFit/coaches/templates/coaches/coach_update.html
+++ b/SheFit/coaches/templates/coaches/coach_update.html
@@ -10,7 +10,7 @@
 
         </div>
 
-        <form class="row g-3 needs-validation" action="{% url 'coaches:coach_update_view' coach.id %}" method="post" enctype="application/x-www-form-urlencoded">
+        <form class="row g-3 needs-validation" action="{% url 'coaches:coach_update_view' coach.id %}" method="post" enctype="multipart/form-data">
             {%csrf_token %}
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingInput" name="username" placeholder="" value="{{coach.user.username}}" required>
