--- a/SheFit/coaches/templates/coaches/component/coach_list.html
+++ b/SheFit/coaches/templates/coaches/component/coach_list.html
@@ -1,15 +1,15 @@
 <section class="cards mt-5">
-  <div class="row row-cols-1 row-cols-md-3 row-cols-sm-2 row-cols-lg-3 g-4">
+  <div class="row row-cols-1 row-cols-md-3 row-cols-sm-2 row-cols-lg-3 g-2">
 
     {% for coach in coaches %}
-    <div class="col d-flex justify-content-center">
+    <div class="col d-flex justify-content-center mb-5">
 
         <div class="card text-center shadow p-4 border-0"
              style="width: 18rem; border-radius: 20px;  ">
 
           <!-- Profile Image -->
           <img src="{{ coach.avatar.url }}"
-               class="rounded-circle mx-auto"
+               class="rounded-circle mx-auto shadow"
                style="width: 120px; height: 120px; object-fit: cover;">
 
           <!-- Name -->
