--- a/SheFit/coaches/templates/coaches/profile_coach.html
+++ b/SheFit/coaches/templates/coaches/profile_coach.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="d-flex align-items-center justify-content-between mt-5">
-    <h3></h3>
+    <h3>الصفحة الشخصية لـ {{coach.user.firstname}}</h3>
 </div>
 
 
@@ -34,7 +34,7 @@
                         <p class="mb-2 text-muted">الهاتف: {{ coach.phone }}</p>
 
                         <div class="d-flex gap-3 mt-4 mb-4">
-                            {% if request.user == coach.user %}
+                            {% if request.user == coach.user or request.user.is_staff %}
                             <!-- زر التعديل -->
                             <a href="{% url 'coaches:coach_update_view' coach.id %}" class="btn btn-warning">
                                 تعديل
@@ -127,8 +127,8 @@
             <div class="card p-4 shadow-sm h-100">
                 <h5 class="fw-bold mb-3">مدربين اخرين</h5>
 
+                {% for coach in related_coaches %}
                 <div class="d-flex align-items-center justify-content-between py-2 border-bottom">
-                    {% for coach in related_coaches %}
                     <div class="d-flex align-items-center">
                         <img src="{{ coach.avatar.url }}" class="rounded-circle me-3" width="50" height="50">
                         <div>
@@ -141,14 +141,10 @@
                             <i class="bi bi-arrow-left-circle"></i>
                         </span>
                     </a>
-                    {% endfor%}
                 </div>
+                {% endfor%}
             </div>
         </div>
-
-
-
-
 
 
     </div>
@@ -162,13 +158,12 @@
                 <h5 class="fw-bold mb-3">التعليقات</h5>
 
 
+                {% for c in coach.coachcomment_set.all %}
                 <div class="card shadow-sm p-3 mb-3">
-
-                    {% for c in coach.coachcomment_set.all %}
-                    <div class="d-flex justify-content-between">
+                    
+                    <div class="d-flex justify-content-between ">
                         <div class="d-flex align-items-center">
-                            <img src="{{ coach.avatar.url }}" class="rounded-circle me-3" width="50"
-                                height="50">
+                            <img src="{{ c.user.coach.avatar.url }}" class="rounded-circle me-3" width="50" height="50">
                             <div>
                                 <h6 class="mb-0 fw-bold">{{ c.user.first_name }} {{ c.user.last_name }}</h6>
                                 <small class="text-muted">{{ c.created_at|date:"Y d M" }}</small>
@@ -187,11 +182,10 @@
                        {{ c.comment }}
                     </p>
 
-                    {% empty %}
-                    <p>لا يوجد تعليقات.</p>
-                    {% endfor %}
-
                 </div>
+                {% empty %}
+                <p>لا يوجد تعليقات.</p>
+                {% endfor %}
 
             </div>
         </div>
@@ -224,7 +218,8 @@
                     <label class="mt-3">نوع التعليق:</label>
                     <select name="type" class="form-select" required>
                         <option value="inquiry">استفسار</option>
-                        <option value="previous_member">مشترك حالي او سابق </option>
+                        <option value="previous_member">مشترك سابق </option>
+                        <option value="current_member">مشترك حالي</option>
                     </select>
 
                     <button class="btn btn-primary mt-4">إرسال</button>
