--- a/SheFit/gyms/templates/gyms/all_gyms.html
+++ b/SheFit/gyms/templates/gyms/all_gyms.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <h1 class="mb-4">النوادي</h1>
-<form method="GET" class="d-flex gap-3 mb-4">
+<form method="GET" class="d-flex flex-wrap gap-2 mb-4 align-items-center">
 
     <!-- فلترة التقييم -->
     <select name="rating" class="form-select w-auto">
