--- a/SheFit/main/templates/main/base.html
+++ b/SheFit/main/templates/main/base.html
@@ -48,8 +48,8 @@
                 </ul>
 
 
-                <form class="d-flex me-3" role="search">
-                    <input class="form-control" type="search" placeholder="ابحث..." aria-label="Search">
+                <form class="d-flex me-3" role="search" action="{%url 'main:search_view'%}">
+                    <input class="form-control" type="search" placeholder="ابحث..." aria-label="Search" name="search" value="{{request.GET.search}}">
                     <button class="btn btn-outline-success ms-2" type="submit">بحث</button>
                 </form>
 
@@ -98,7 +98,7 @@
      <!--Message-->
     {% if messages %}
     {%for message in messages %}
-    <div class="container alert {{message.tags}} alert-dismissible fade show" role="alert">
+    <div class="container alert {{message.tags}} alert-dismissible fade show mt-4" role="alert">
         {{message}}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
