--- a/SheFit/main/templates/main/home.html
+++ b/SheFit/main/templates/main/home.html
@@ -41,6 +41,22 @@
     <!-- عرض أعلى 3 نوادي -->
    
         {% include "gyms/component/gyms_list.html" with gyms=top_gyms %}
+
+
+   
+    <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
+        <h3 class="fw-bold m-0">أعلى المدربين تقييماً</h3>
+        <a href="{% url 'coaches:all_coaches_view'  %}"
+            class="text-decoration-none d-flex align-items-center link-gradient">
+            <i class="bi bi-arrow-left-circle fs-4"></i>
+            <span class="ms-1">للمزيد من المدربين</span>
+        </a>
+
+    </div>
+
+    <!-- عرض أعلى 3 مدربين -->
+        {% include 'coaches/component/coach_list.html' with coaches=top_coaches %}
+        
    
 
 
