add ,delete, update ,SubscriptionPlan

--- a/SheFit/accounts/templates/accounts/profile_trainee.html
+++ b/SheFit/accounts/templates/accounts/profile_trainee.html
@@ -1,13 +1,13 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block title %}Profile Coaches{% endblock %}
+{% block title %}Profile Trainee{% endblock %}
 
 
 {% block content %}
 
 <div class="d-flex align-items-center justify-content-between mt-5">
-    <h3>الصفحة الشخصية لـ {{coach.user.first_name}}</h3>
+    <h3>الصفحة الشخصية لـ {{trainee.user.first_name}}</h3>
 </div>
 
 
