--- a/SheFit/gyms/templates/gyms/gym_update.html
+++ b/SheFit/gyms/templates/gyms/gym_update.html
@@ -21,7 +21,7 @@
                 {% csrf_token %}
 
 
-                <input type="text" placeholder="name" name="name" class="form-control" value="{{gym.name}}" />
+                <input type="text" placeholder="أسم النادي" name="name" class="form-control" value="{{gym.name}}" />
 
 
                 <!-- صورة النادي -->
